@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: pkgtool,v 1.58 2004/01/26 22:15:24 mej Exp $
+# $Id: pkgtool,v 1.59 2004/03/01 03:10:04 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -103,7 +103,7 @@ main
     select STDOUT; $| = 1;
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.58 $ created on $Date: 2004/01/26 22:15:24 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.59 $ created on $Date: 2004/03/01 03:10:04 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
@@ -214,12 +214,10 @@ main
         }
         print "Package build succeeded.  Output files are:\n\n";
         foreach my $f (split(' ', $outfiles)) {
-            if (! -e $f) {
-                my $instroot = &pkgvar_instroot();
+            my $instroot = &pkgvar_instroot();
 
-                if ($instroot && -e "$instroot$f") {
-                    $f = $instroot . $f;
-                }
+            if ($instroot && -e "$instroot$f") {
+                $f = $instroot . $f;
             }
             if (&copy_files($f, ".")) {
                 print &basename($f);
